@@ -55,6 +55,7 @@ Version 1.13.0-dev:
    * Made orb and minmap colors configurable by the game preferences.
    * Remove 'allow_new_game=no' entries from random map new game list
    * Fixed bug #22095: An assertion failure in the gamestate inspector.
+   * Changed: A listbox can now update its size when rows are added.
  * WML engine:
    * Added customizable recall costs for unit types and individual units,
      using the new recall_cost attribute in [unit_type] and [unit].
